[gd_scene load_steps=6 format=2]

[ext_resource path="res://components/config/component_config_line_edit_int.gd" type="Script" id=1]
[ext_resource path="res://assets/theme/Barlow-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://components/search_cards/elements/cards_property_duration_popup.gd" type="Script" id=3]
[ext_resource path="res://components/search_cards/elements/duration_edit.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="DurationLineEdit" type="HBoxContainer"]
margin_right = 250.0
margin_bottom = 40.0
script = ExtResource( 4 )

[node name="IntEdit" type="LineEdit" parent="."]
margin_right = 186.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 190.0
margin_right = 250.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 33 )
theme_type_variation = "ButtonIcon"
text = "Days"
expand_icon = true

[node name="Popup" type="PopupPanel" parent="Button"]
visible = true
margin_right = 114.0
margin_bottom = 178.0
script = ExtResource( 3 )

[node name="Grid" type="GridContainer" parent="Button/Popup"]
margin_left = 5.0
margin_top = 5.0
margin_right = 109.0
margin_bottom = 289.0
custom_constants/vseparation = 10

[node name="SecondsBtn" type="Button" parent="Button/Popup/Grid"]
margin_right = 87.0
margin_bottom = 32.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Seconds"

[node name="MinutesBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 42.0
margin_right = 87.0
margin_bottom = 74.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Minutes"

[node name="HoursBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 84.0
margin_right = 87.0
margin_bottom = 116.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Hours"

[node name="DaysBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 126.0
margin_right = 87.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Days"

[node name="WeeksBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 168.0
margin_right = 87.0
margin_bottom = 200.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Weeks"

[node name="MonthsBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 210.0
margin_right = 87.0
margin_bottom = 242.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Months"

[node name="YearsBtn" type="Button" parent="Button/Popup/Grid"]
margin_top = 252.0
margin_right = 87.0
margin_bottom = 284.0
rect_min_size = Vector2( 50, 0 )
custom_fonts/font = SubResource( 1 )
text = "Years"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="update_duration_type" from="Button/Popup" to="." method="_on_Popup_update_duration_type"]
[connection signal="pressed" from="Button/Popup/Grid/SecondsBtn" to="Button/Popup" method="_on_SecondsBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/MinutesBtn" to="Button/Popup" method="_on_MinutesBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/HoursBtn" to="Button/Popup" method="_on_HoursBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/DaysBtn" to="Button/Popup" method="_on_DaysBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/WeeksBtn" to="Button/Popup" method="_on_WeeksBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/MonthsBtn" to="Button/Popup" method="_on_MonthsBtn_pressed"]
[connection signal="pressed" from="Button/Popup/Grid/YearsBtn" to="Button/Popup" method="_on_YearsBtn_pressed"]
